--- a/src/main/webapp/KPizza.html
+++ b/src/main/webapp/KPizza.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title> K PIZZA STORE</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -31,12 +31,10 @@ body, h1, h2, h3, h4, h5, h6 {
 		
 	<!-- Navbar (sit on top) -->
 	<div class="w3-top w3-hide-small">
-		<div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off"
-			id="myNavbar">
-			<a href="#" class="w3-bar-item w3-button">HOME</a> <a
-				href="controller?command=kpizzaMenuAll"
-				class="w3-bar-item w3-button">MENU</a> <a href="#order"
-				class="w3-bar-item w3-button">ORDER</a>
+		<div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
+			<a href="#" class="w3-bar-item w3-button">HOME</a> 
+			<a href="controller?command=kpizzaMenuAll" class="w3-bar-item w3-button">MENU</a> 
+				<a href="controller?command=kpizzaMenuAll" class="w3-bar-item w3-button">ORDER</a>
 			<div class="w3-right w3-hide-small">
 				<a href="#login" class="w3-bar-item w3-button">session.getAttribute("id")</a>
 			</div>
@@ -61,15 +59,12 @@ body, h1, h2, h3, h4, h5, h6 {
 
 	
 
-
-
-
 	<!-- Footer --><fo oter class="w3-center w3-black w3-padding-48 w3-xxlarge">
-		<p>
+<!-- 		<p>
 			Powered by <a href="https://www.w3schools.com/w3css/default.asp"
 						title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
 		</p>
-	</footer>
+	</footer> -->
 
 	
 
