--- a/src/main/webapp/clientInsert.html
+++ b/src/main/webapp/clientInsert.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
 
-<form action="/controller" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin" method="post">
+<form action="controller" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin" method="post">
 <h3 class="w3-center">회원가입</h3>
  
 <div class="w3-row w3-section">
