--- a/src/main/webapp/KpizzaLogin.html
+++ b/src/main/webapp/KpizzaLogin.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
 <title>K PIZZA STORE</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,6 +46,7 @@ body, h1, h2, h3, h4, h5, h6 {
  					<button
 						onclick="document.getElementById('id01').style.display='block'"
 						class="w3-button w3-red w3-large">Login</button>
+					<button class="w3-button w3-red w3-large" class="w3-bar-item w3-button"><a href="KPizza.html">HOME</a></button>
 
 					<div id="id01" class="w3-modal" style="display: block;">
 						<div class="w3-modal-content w3-card-4 w3-animate-zoom"
@@ -72,27 +72,22 @@ body, h1, h2, h3, h4, h5, h6 {
 
 
 									<button
-										class="w3-button w3-block w3-blue w3-section w3-padding"
-										type="submit">로그인</button>
+										class="w3-button w3-block w3-blue w3-section w3-padding" type="submit">로그인</button>
 
-
-									<input class="w3-check w3-margin-top" type="checkbox"
-										checked="checked"> 아이디 저장
+									<input class="w3-check w3-margin-top" type="checkbox"> 아이디 저장
 								</div>
 							</form>
 
-							<div
-								class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+							<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
 								<button
 									onclick="document.getElementById('id01').style.display='none'"
 									type="button" class="w3-button w3-red">취소</button>
 								<button
-									onclick="document.getElementById('id01').style.display='none'"
-									type="button" class="w3-button w3-red">
-									<a href="clientInsert.html">회원가입</a>
+									type="button" class="w3-button w3-red"><a href="clientInsert.html">
+									회원가입</a>
 								</button>
-								<span class="w3-right w3-padding w3-hide-small"><a
-									href="#">아이디 찾기</a> / <a href="#">비밀번호 찾기</a></span>
+								<span class="w3-right w3-padding w3-hide-small">
+								<a href="#">아이디 찾기</a> / <a href="#">비밀번호 찾기</a></span>
 							</div>
 
 						</div>
