--- a/src/main/webapp/clientInsert.html
+++ b/src/main/webapp/clientInsert.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+
+<title>K PIZZA STORE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+
+
 <body>
-
-<form action="controller" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin" method="post">
-<h3 class="w3-center">회원가입</h3>
- 
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-id-card-o"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="id" type="text" placeholder="사용할 아이디를 입력해주세요">
-    </div>
-</div>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-shield"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="pw" type="text" placeholder="사용할 비밀번호를 입력해주세요">
-    </div>
-</div>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="name" type="text" placeholder="이름을 입력해주세요">
-    </div>
-</div>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="phone" type="text" placeholder="연락처를 입력해주세요">
-    </div>
-</div>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user-circle-o"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="nickname" type="text" placeholder="사용할 닉네임을 입력해주세요">
-    </div>
-</div>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-home"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="address" type="text" placeholder="주소를 입력해주세요">
-    </div>
-</div>
-
-<p class="w3-center">
-<button class="w3-button w3-section w3-orange w3-ripple" type="submit" value="가입"> 가입신청 </button>
-<button class="w3-button w3-section w3-orange w3-ripple"><a href="K-pizzaLogin.html">취소</a></button>
-</p>
-</form>
+	
+	<form action="controller" class="w3-container w3-card-4 w3-light-grey w3-text-black w3-margin" method="post">
+		<h3 class="w3-center">회원가입</h3>
+		 
+		<div class="w3-row w3-section">
+		  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-id-card-o"></i></div>
+		    <div class="w3-rest">
+		      <input class="w3-input w3-border" name="id" type="text" placeholder="사용할 아이디를 입력해주세요">
+		    </div>
+		</div>
+		
+		<div class="w3-row w3-section">
+		  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-shield"></i></div>
+		    <div class="w3-rest">
+		      <input class="w3-input w3-border" name="pw" type="text" placeholder="사용할 비밀번호를 입력해주세요">
+		    </div>
+		</div>
+		
+		<div class="w3-row w3-section">
+		  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
+		    <div class="w3-rest">
+		      <input class="w3-input w3-border" name="name" type="text" placeholder="이름을 입력해주세요">
+		    </div>
+		</div>
+		
+		<div class="w3-row w3-section">
+		  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
+		    <div class="w3-rest">
+		      <input class="w3-input w3-border" name="phone" type="text" placeholder="연락처를 입력해주세요">
+		    </div>
+		</div>
+		
+		<div class="w3-row w3-section">
+		  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user-circle-o"></i></div>
+		    <div class="w3-rest">
+		      <input class="w3-input w3-border" name="nickname" type="text" placeholder="사용할 닉네임을 입력해주세요">
+		    </div>
+		</div>
+		
+		<div class="w3-row w3-section">
+		  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-home"></i></div>
+		    <div class="w3-rest">
+		      <input class="w3-input w3-border" name="address" type="text" placeholder="주소를 입력해주세요">
+		    </div>
+		</div>
+		
+		<p class="w3-center">
+			<button class="w3-button w3-section w3-red w3-ripple" type="submit" value="가입"> 가입신청 </button>
+			<button class="w3-button w3-section w3-red w3-ripple"><a href="KpizzaLogin.html">취소</a></button>
+		</p>
+	</form>
 
 </body>
 </html> 
