--- a/src/main/webapp/KPizza.html
+++ b/src/main/webapp/KPizza.html
@@ -35,9 +35,9 @@ body, h1, h2, h3, h4, h5, h6 {
 		<div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
 			<a href="KPizza.html" class="w3-bar-item w3-button">HOME</a> 
 			<a href="controller?command=kpizzaMenuAll" class="w3-bar-item w3-button">MENU</a> 
-				<a href="Order.jsp" class="w3-bar-item w3-button">ORDER</a>
+			<a href="Order.jsp" class="w3-bar-item w3-button">ORDER</a>
 			<div class="w3-right w3-hide-small">
-				<a href="KpizzaLogin.html" class="w3-bar-item w3-button">session.getAttribute("id")</a>
+				<a href="KpizzaLogin.html" class="w3-bar-item w3-button">LOG IN</a>
 			</div>
 		</div>
 	</div>
@@ -47,12 +47,13 @@ body, h1, h2, h3, h4, h5, h6 {
 		<div class="w3-display-bottomleft w3-padding">
 			<span class="w3-tag w3-xlarge">AM 10시 ~ PM 10시</span>
 		</div>
+		
 		<div class="w3-display-middle w3-center">
 			<span class="w3-text-white w3-hide-small" style="font-size: 100px">KPIZZA<br>
 				<br></span> <span class="w3-text-white w3-hide-large w3-hide-medium"
 				style="font-size: 60px"><b>KPIZZA<br> <br></b></span>
 			<p>
-				<a href="#menu" class="w3-button w3-xxlarge w3-black">Let me see
+				<a href="controller?command=kpizzaMenuAll" class="w3-button w3-xxlarge w3-black">Let me see
 					the menu</a>
 			</p>
 		</div>
@@ -63,8 +64,7 @@ body, h1, h2, h3, h4, h5, h6 {
 	<!-- Footer -->
 	<footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
 		<p>
-			Contact by <a href="llink"
-						title="store" target="_blank" class="w3-hover-text-green">K PIZZA STORE</a>
+			Contact by <a href="kpizza.com" title="store" target="_blank" class="w3-hover-text-green">K PIZZA STORE</a>
 		</p>
 	</footer>
 
