--- a/src/main/webapp/clientInsert.html
+++ b/src/main/webapp/clientInsert.html
@@ -5,9 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-
+<link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/512/819/premium/819810.png?token=exp=1644675573~hmac=7db772047276497dde3a8e73d2ca954a">
 
 
 <body>
@@ -58,8 +56,8 @@
 		</div>
 		
 		<p class="w3-center">
-			<button class="w3-button w3-section w3-red w3-ripple" type="submit" value="가입"> 가입신청 </button>
-			<button class="w3-button w3-section w3-red w3-ripple"><a href="KpizzaLogin.html">취소</a></button>
+			<button class="w3-button w3-section w3-red w3-ripple" type="submit" value="가입"><a href="clientDetail.jsp"> 가입하기 </a></button>
+			<button class="w3-button w3-section w3-red w3-ripple" type="submit" value="취소"><a href="KpizzaLogin.html">취소</a></button>
 		</p>
 	</form>
 
