[upload]login page

--- a/src/main/webapp/clientInsert.html
+++ b/src/main/webapp/clientInsert.html
@@ -57,7 +57,7 @@
 		
 		<p class="w3-center">
 			<button class="w3-button w3-section w3-red w3-ripple" type="submit" value="가입"><a href="controller?command=clientInsert"> 가입하기 </a></button>
-			<button class="w3-button w3-section w3-red w3-ripple" type="submit" value="취소"><a href="KpizzaLogin.html">취소</a></button>
+			<button class="w3-button w3-section w3-red w3-ripple" type="reset" value="취소"><a href="KpizzaLogin.html">취소</a></button>
 		</p>
 	</form>
 
