--- a/src/main/webapp/KpizzaLogin.html
+++ b/src/main/webapp/KpizzaLogin.html
@@ -54,22 +54,27 @@ body, h1, h2, h3, h4, h5, h6 {
 							style="max-width: 600px">
 
 							<div class="w3-center">
-								<br> <span
+								<br> 
+								<span
 									onclick="document.getElementById('id01').style.display='none'"
 									class="w3-button w3-xlarge w3-transparent w3-display-topright"
-									title="Close Modal">x</span> <img
-									src="./images/loginPIzza.png" alt="Avatar" style="width: 30%"
+									title="Close Modal">x</span> 
+									<img 
+									src="./images/loginPIzza.png" alt="Avatar" style="width: 30%" 
 									class="w3-circle w3-margin-top">
 							</div>
 
 							<form class="w3-container" action="login" method="post">
 								<div class="w3-section">
-									<label><b>아이디</b></label> <input
+									<label><b>아이디</b></label> 
+									<input
 										class="w3-input w3-border w3-margin-bottom" type="text"
 										placeholder="아이디를 입력하세요" name="id" value="" required>
-									<label><b>비밀번호</b></label> <input class="w3-input w3-border"
-										type="passward" style="-webkit-text-security: square;" placeholder="비밀번호를 입력하세요" name="pw" value=""
-										required>
+									<label><b>비밀번호</b></label> 
+									<input 
+									class="w3-input w3-border"
+									type="passward" style="-webkit-text-security: square;" 
+									placeholder="비밀번호를 입력하세요" name="pw" value="" required>
 
 
 									<button
@@ -84,11 +89,12 @@ body, h1, h2, h3, h4, h5, h6 {
 									onclick="document.getElementById('id01').style.display='none'"
 									type="button" class="w3-button w3-red">취소</button>
 								<button
-									type="button" class="w3-button w3-red"><a href="clientInsert.html">
-									회원가입</a>
+									type="button" class="w3-button w3-red">
+									<a href="clientInsert.html">회원가입</a>
 								</button>
 								<span class="w3-right w3-padding w3-hide-small">
-								<a href="#">아이디 찾기</a> / <a href="#">비밀번호 찾기</a></span>
+									<a href="#">아이디 찾기</a> / <a href="#">비밀번호 찾기</a>
+								</span>
 							</div>
 
 						</div>
